--- a/app/views/recurring_dispatchers/_unschedule_trip_dropdown.html.haml
+++ b/app/views/recurring_dispatchers/_unschedule_trip_dropdown.html.haml
@@ -7,7 +7,7 @@
     Assign to
     %i.fa.fa-ellipsis-h
     %span.caret
-  %ul.dropdown-menu    
+  %ul.dropdown-menu.pull-right      
     - options.each do |status_id, label|
       %li
         %a.unschedule_trip.non_jump_top{href: '#', data: {status_id: status_id} }
