--- a/app/views/drivers/_availability_forecast_run_view.html.haml
+++ b/app/views/drivers/_availability_forecast_run_view.html.haml
@@ -59,6 +59,15 @@
     margin: 0px 0px 0px -5px;
   }
 
+  .run-availability-table a.link_disabled {
+    pointer-events: none;
+    cursor: default;
+  }
+
+  .run-availability-table a.link_disabled i {
+    color: lightgrey !important;
+  }
+
 
 .panel.panel-primary.availability_forecast_run_view_panel
   .panel-heading
@@ -67,7 +76,7 @@
         %i.fa.fa-chevron-up
     %b= "#{@runs.size} Runs: #{@total_assigned_run_count} Assigned, #{@total_unassigned_run_count} Unassigned"
   .panel-body.form-horizontal{style: 'padding:0px;'}
-    .table-responsive
+    .table-responsive{style: 'overflow: visible;'}
       - if @runs.any?
         %table.table.table-condensed.run-availability-table#run_availability_table
           %thead
@@ -86,7 +95,7 @@
 
           %tbody
             - row_data.each do |r|
-              %tr{data: {id: r[:id], driver_name: r[:driver_name]}}
+              %tr{data: {id: r[:id], driver_name: r[:driver_name], start_time: r[:start_time_diff], end_time: r[:end_time_diff]}}
                 %td
                   = link_to r[:name], run_path(r[:id]), target: '_blank'
                 - ticks.each do |tick|
@@ -95,9 +104,19 @@
                   %td.chart_cell{style: "white-space: nowrap !important; color: white;", class: class_name || "", data: {time_flag: tick[0]}}
                 - if can?(:edit, Run)
                   %td.pull-right
-                    = button_tag 'x'
-                    = button_tag 'Assign'
+                    = link_to unassign_driver_run_path(r[:id]), method: 'patch', remote: true, class: r[:driver_id].blank? ? "link_disabled" : "",  data: {confirm: 'Are you sure to unassign the driver from this run?'} do 
+                      %i.fa.fa-remove{style: 'color: red;'}
+                    .dropdown{style: 'display: inline-block !important;'}
+                      %button{type: 'button', data: {toggle: 'dropdown'}}
+                        Assign
+                        %span.caret
+                      %ul.dropdown-menu.pull-right
+                        - @drivers_available_for_runs[r[:id]].each do |d|
+                          %li
+                            %a{href:'#', data: {driver_id: d[:id]}}
+                              = d[:name]
 
+ 
 - if @runs.any?
   :javascript
     $(function() {
