--- a/app/views/drivers/_daily_availability_summary_view.html.haml
+++ b/app/views/drivers/_daily_availability_summary_view.html.haml
@@ -21,7 +21,7 @@
 
   @total_available_driver_ids = (available_operating_hours.for_day_of_week(day_of_week).where(operatable_id: driver_ids).pluck(:operatable_id) + available_daily_operating_hours.for_date(date).where(operatable_id: driver_ids).pluck(:operatable_id) - unavailable_daily_operating_hours.for_date(date).where(operatable_id: driver_ids).pluck(:operatable_id)).uniq - @total_on_leave_driver_ids
 
-  @total_available_drivers = Driver.where(id: @total_available_driver_ids)
+  @total_available_drivers = Driver.where(id: @total_available_driver_ids).default_order
 
   @total_assigned_run_count = @total_assigned_driver_count = @total_assigned_runs.size
   @total_unassigned_run_count = @runs.where(driver_id: nil).size
@@ -33,6 +33,21 @@
 
   @total_on_leave_driver_count = @total_on_leave_driver_ids.size
 
+  # get lists of drivers available for a run
+  @drivers_available_for_runs = {}
+  @runs.pluck(:id, :name, :scheduled_start_time, :scheduled_end_time).each do |r|
+    @drivers_available_for_runs[r[0]] = [] unless @drivers_available_for_runs.has_key?(r[0])
+    @total_available_drivers.each do |d|
+      if d.available_between?(date, r[2].strftime('%H:%M'), r[3].strftime('%H:%M')) 
+        @drivers_available_for_runs[r[0]] << {
+          id: d.id,
+          run_name: r[1],
+          name: d.user_name
+        } 
+      end
+    end
+  end
+
 :css
   .lack_drivers, .has_unassigned_run {
     padding: 10px;
@@ -43,6 +58,14 @@
   table th {
     background: transparent;
     color: black;
+  }
+
+  table th, table td {
+    white-space: nowrap !important;
+  }
+
+  #main {
+    z-index: 11000 !important;
   }
 
 .col-sm-12.row#daily_availability_forecast_view{style: 'padding: 0px;'}
