--- a/app/views/drivers/_availability_forecast_run_view.html.haml
+++ b/app/views/drivers/_availability_forecast_run_view.html.haml
@@ -96,7 +96,7 @@
           %tbody
             - row_data.each do |r|
               %tr{data: {id: r[:id], driver_name: r[:driver_name], start_time: r[:start_time_diff], end_time: r[:end_time_diff]}}
-                %td
+                %td{style: 'width: 100px !important; white-space: normal !important;'}
                   = link_to r[:name], run_path(r[:id]), target: '_blank'
                 - ticks.each do |tick|
                   - class_name = !(r[:start_time_diff] >= tick[0]) && !(r[:end_time_diff] <= tick[0]) ? "is_filled" : ""
@@ -110,7 +110,7 @@
                       %button{type: 'button', data: {toggle: 'dropdown'}}
                         Assign
                         %span.caret
-                      %ul.dropdown-menu.pull-right
+                      %ul.dropdown-menu.pull-right{style: 'z-index: 10000;'}
                         - @drivers_available_for_runs[r[:id]].each do |d|
                           %li
                             %a{href:'#', data: {driver_id: d[:id]}}
