--- a/app/views/drivers/availability_forecast.html.haml
+++ b/app/views/drivers/availability_forecast.html.haml
@@ -8,7 +8,7 @@
   .col-sm-4
     = render 'availability_forecast_table'
   .col-sm-8
-    = render 'daily_availability_summary_view', date: Date.today
+    = render 'daily_availability_summary_view', date: @default_date
 
 :javascript
   $(function() {
