--- a/app/views/drivers/_daily_availability_summary_view.html.haml
+++ b/app/views/drivers/_daily_availability_summary_view.html.haml
@@ -69,7 +69,7 @@
     z-index: 11000 !important;
   }
 
-.col-sm-12.row#daily_availability_forecast_view{style: 'padding: 0px;'}
+.col-sm-12#daily_availability_forecast_view{style: 'padding: 0px;'}
   %h4
     = "Availability for #{date.strftime('%A, %B %d, %Y')}"
   - if lack_driver
