--- a/app/views/drivers/availability_forecast.html.haml
+++ b/app/views/drivers/availability_forecast.html.haml
@@ -4,10 +4,10 @@
   }
 
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers'
-.col-sm-12
-  .col-sm-4
+.col-sm-12{style: 'padding-left: 0px; padding-right: 0px;'}
+  .col-sm-4.col-lg-3{style: 'padding-left: 0px;'}
     = render 'availability_forecast_table'
-  .col-sm-8
+  .col-sm-8.col-lg-9{style: 'padding-left: 0px; padding-right: 0px;'}
     = render 'daily_availability_summary_view', date: @default_date
 
 :javascript
