--- a/app/views/drivers/_availability_forecast_table.html.haml
+++ b/app/views/drivers/_availability_forecast_table.html.haml
@@ -63,6 +63,7 @@
   }
 
   .driver_availability_forecast_table tr.in_view td{
+    border-top: 2px solid black !important;
     border-bottom: 2px solid black !important;
   }
 
