--- a/app/views/drivers/_daily_availability_summary_view.html.haml
+++ b/app/views/drivers/_daily_availability_summary_view.html.haml
@@ -36,7 +36,7 @@
 
   # get lists of drivers available for a run
   @drivers_available_for_runs = {}
-  @runs.pluck(:id, :name, :scheduled_start_time, :scheduled_end_time).each do |r|
+  @runs.reorder(nil).default_order.pluck(:id, :name, :scheduled_start_time, :scheduled_end_time).each do |r|
     @drivers_available_for_runs[r[0]] = [] unless @drivers_available_for_runs.has_key?(r[0])
     @total_available_drivers.each do |d|
       if d.available_between?(date, r[2].strftime('%H:%M'), r[3].strftime('%H:%M')) 
