--- a/app/views/daily_operating_hours/remove.js.erb
+++ b/app/views/daily_operating_hours/remove.js.erb
@@ -3,16 +3,20 @@ var day_of_week = "<%= @day_of_week %>"
 var daily_table = $('table.daily_availability');
 var daily_row = daily_table.find("tr[data-date-value=" + date+ "]");
 daily_row.find('input.is_all_day').prop('checked', false);
-daily_row.find('input.is_unavailable').prop('checked', false);
 daily_row.find('td.is_all_day_filled').removeClass('is_all_day_filled');
 daily_row.find('td.is_filled').removeClass('is_filled');
+daily_row.find('td.hour_cell').prop('title', "");
 
 var recur_row = $('table.recur_availability tr[data-date-value=' + day_of_week + ']');
 if (recur_row.find('td.hour_cell').hasClass('is_all_day_filled')) {
+  daily_row.find('input.is_all_day').prop('checked', true);
   daily_row.find('td.hour_cell').addClass('is_all_day_filled');
+  daily_row.find('td.hour_cell').prop('title', "All day");
 } else {
   recur_row.find('td.is_filled').each(function() {
     var time_flag = $(this).data('time-flag');
-    daily_row.find('td.hour_cell[data-time-flag="' + time_flag + '"]').addClass('is_filled');
+    var daily_cell = daily_row.find('td.hour_cell[data-time-flag="' + time_flag + '"]');
+    daily_cell.addClass('is_filled');
+    daily_cell.prop('title', $(this).prop('title'));
   });
 }
